added api for Storage consumption of file and folder
